--- a/soft/k8s20201220-master/k8s 安装部署2020-12-20.md
+++ b/soft/k8s20201220-master/k8s 安装部署2020-12-20.md
@@ -8,9 +8,9 @@ master111 node112 node113
 
 ~~~shell
 #配置主机名
-hostnamectl set-hostname master111
+hostnamectl set-hostname master
 hostnamectl set-hostname node112
-hostnamectl set-hostname node113
+hostnamectl set-hostname node
 
 # 3台主机，安装基础软件
 yum -y install wget bash-completion net-tools vim
@@ -39,7 +39,7 @@ sudo sed -i '11s/\/dev/# \/dev/g' /etc/fstab && sudo  swapoff -a
 
 #yum源设置
 mkdir /etc/yum.repos.d/ori &&  mv /etc/yum.repos.d/CentOS-* /etc/yum.repos.d/ori/
-cat > /etc/yum.repos.d/kubenetes.repo << "EOF"
+sudo bash -c "cat > /etc/yum.repos.d/kubenetes.repo" << EOF
 # kubenetes.repo
 #
 # The mirror system uses the connecting IP address of the client and the
@@ -83,8 +83,6 @@ baseurl=https://mirrors.tuna.tsinghua.edu.cn/centos/$releasever/centosplus/$base
 gpgcheck=1
 enabled=0
 gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-8
-EOF
-
 
 [aliyun-AppStream]
 name=CentOS-$releasever - AppStream
@@ -106,6 +104,7 @@ baseurl=https://mirrors.aliyun.com/centos/$releasever/extras/$basearch/os/
 gpgcheck=1
 enabled=1
 gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-centosofficial
+EOF
 ~~~
 
 ### 安装epel配置epel源
@@ -113,7 +112,7 @@ gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-centosofficial
 ~~~shell
 yum install -y epel-release
 
-cat > /etc/yum.repos.d/epel.repo <<"EOF"
+sudo bash -c "cat > /etc/yum.repos.d/epel.repo" << EOF
 [epel]
 name=Extra Packages for Enterprise Linux 8 - $basearch
 baseurl=https://mirrors.tuna.tsinghua.edu.cn/epel/8/$basearch
