--- a/soft/k8s20201220-master/使用二进制方式搭建K8S集群-2021-1-4.md
+++ b/soft/k8s20201220-master/使用二进制方式搭建K8S集群-2021-1-4.md
@@ -398,7 +398,7 @@ cat > ca-csr.json << EOF
 EOF
 
 ##生成证书
-[root@k8s-master170 k8s]# cfssl gencert -initca ca-csr.json | cfssljson -bare ca -
+[root@k8s-master170 k8s]# cfssl gencert -initca ca-csr.json | cfssljson -bare ca - # 不要加 sudo
 [root@k8s-master170 k8s]# ll *pem
 -rw-------. 1 root root 1679 1月   4 21:45 ca-key.pem
 -rw-r--r--. 1 root root 1359 1月   4 21:45 ca.pem
