--- a/soft/k8s20201220-master/使用二进制方式搭建K8S集群-2021-1-5.md
+++ b/soft/k8s20201220-master/使用二进制方式搭建K8S集群-2021-1-5.md
@@ -9,39 +9,40 @@ sudo yum -y install wget bash-completion net-tools vim net-tools
 sudo systemctl stop firewalld && sudo systemctl disable firewalld
 
 # 关闭selinux
-sed -i 's/enforcing/disabled/' /etc/selinux/config  # 永久
+sudo sed -i 's/enforcing/disabled/' /etc/selinux/config  # 永久
 setenforce 0  # 临时
 
 # 根据规划设置主机名
 hostnamectl set-hostname <hostname>
 
 # 在master添加hosts
-cat >> /etc/hosts << EOF
-192.168.56.138    master-10
-192.168.56.139    node-10
-192.168.56.140    node-11
+sudo bash -c "cat >> /etc/hosts" << EOF
+192.168.11.128    master-00
+192.168.11.129    node-00
+192.168.11.130    node-01
 EOF
 
 # 将桥接的IPv4流量传递到iptables的链
-cat > /etc/sysctl.d/k8s.conf << EOF
+sudo bash -c "cat > /etc/sysctl.d/k8s.conf" << EOF
 net.bridge.bridge-nf-call-ip6tables = 1
 net.bridge.bridge-nf-call-iptables = 1
 EOF
-sysctl --system  # 生效
+sudo sysctl --system  # 生效
 
 # 同步时间
-yum install -y chrony
+sudo yum install -y chrony
 sudo systemctl restart chronyd && sudo systemctl enable chronyd && sudo systemctl status chronyd
 
 
 ~~~
 
-### 准备cfssl证书生成工具
+### 准备cfssl证书生成工具 可以去github 使用go 安装
 
 ~~~shell
-[root@k8s-master170 ~]# wget https://pkg.cfssl.org/R1.2/cfssl_linux-amd64
-[root@k8s-master170 ~]# wget https://pkg.cfssl.org/R1.2/cfssljson_linux-amd64
-[root@k8s-master170 ~]# wget https://pkg.cfssl.org/R1.2/cfssl-certinfo_linux-amd64
+[root@k8s-master170 ~]# sudo wget https://pkg.cfssl.org/R1.2/cfssl_linux-amd64
+[root@k8s-master170 ~]# sudo wget https://github.com/cloudflare/cfssl/releases/download/v1.6.0/cfssl_1.6.0_linux_amd64
+[root@k8s-master170 ~]# sudo wget https://pkg.cfssl.org/R1.2/cfssljson_linux-amd64
+[root@k8s-master170 ~]# sudo wget https://pkg.cfssl.org/R1.2/cfssl-certinfo_linux-amd64
 [root@k8s-master170 ~]# chmod +x cfssl_linux-amd64 cfssljson_linux-amd64 cfssl-certinfo_linux-amd64
 [root@k8s-master170 ~]# mv cfssl_linux-amd64 /usr/local/bin/cfssl
 [root@k8s-master170 ~]# mv cfssljson_linux-amd64 /usr/local/bin/cfssljson
@@ -51,10 +52,10 @@ sudo systemctl restart chronyd && sudo systemctl enable chronyd && sudo systemct
 ### 生成Etcd证书
 
 ~~~shell
-[root@k8s-master170 ~]# mkdir -p ~/TLS/{etcd,k8s}
+[root@k8s-master170 ~]# sudo mkdir -p ~/TLS/{etcd,k8s}
 [root@k8s-master170 ~]# cd TLS/etcd
 ##自签CA
-cat > ca-config.json << EOF
+sudo bash -c "cat > ca-config.json" << EOF
 {
   "signing": {
     "default": {
@@ -75,7 +76,7 @@ cat > ca-config.json << EOF
 }
 EOF
 
-cat > ca-csr.json << EOF
+sudo bash -c "cat > ca-csr.json" << EOF
 {
     "CN": "etcd CA",
     "key": {
@@ -102,14 +103,25 @@ EOF
 ##使用自签CA签发Etcd HTTPS证书
 ##创建证书申请文件
 ##注：上述文件hosts字段中IP为所有etcd节点的集群内部通信IP，一个都不能少！为了方便后期扩容可以多写几个预留的IP
-cat > server-csr.json << EOF
+sudo bash -c "cat > server-csr.json" << EOF
 {
     "CN": "etcd",
     "hosts": [
-    "192.168.1.170",
-    "192.168.1.171",
-    "192.168.1.172",
-    "192.168.1.173"
+    "192.168.11.125",
+    "192.168.11.126",
+    "192.168.11.127",
+    "192.168.11.128",
+    "192.168.11.129",
+    "192.168.11.130",
+    "192.168.11.131",
+    "192.168.11.132",
+    "192.168.11.133",
+    "192.168.11.134",
+    "192.168.11.135",
+    "192.168.11.136",
+    "192.168.11.137",
+    "192.168.11.138",
+    "192.168.11.139"
     ],
     "key": {
         "algo": "rsa",
@@ -151,17 +163,24 @@ EOF
 -rwxr-xr-x. 1 630384594 600260513 23827424 5月  22 2020 etcd
 -rwxr-xr-x. 1 630384594 600260513 17612384 5月  22 2020 etcdctl
 
-[root@k8s-master170 ~]# cat > /opt/etcd/cfg/etcd.conf << EOF
+192.168.11.128
+192.168.11.129
+192.168.11.130
+
+
+> 不同节点  ETCD_LISTEN_PEER_URLS  ETCD_LISTEN_CLIENT_URLS ETCD_INITIAL_ADVERTISE_PEER_URLS  ETCD_ADVERTISE_CLIENT_URLS 不一样
+
+[root@k8s-master170 ~]# sudo bash -c "cat > /opt/etcd/cfg/etcd.conf" << EOF
 #[Member]
 ETCD_NAME="etcd-1"
 ETCD_DATA_DIR="/var/lib/etcd/default.etcd"
-ETCD_LISTEN_PEER_URLS="https://192.168.56.138:2380"
-ETCD_LISTEN_CLIENT_URLS="https://192.168.56.138:2379"
+ETCD_LISTEN_PEER_URLS="https://192.168.11.128:2380"
+ETCD_LISTEN_CLIENT_URLS="https://192.168.11.128:2379"
 
 #[Clustering]
-ETCD_INITIAL_ADVERTISE_PEER_URLS="https://192.168.56.138:2380"
-ETCD_ADVERTISE_CLIENT_URLS="https://192.168.56.138:2379"
-ETCD_INITIAL_CLUSTER="etcd-1=https://192.168.56.138:2380,etcd-2=https://192.168.56.139:2380,etcd-3=https://192.168.56.140:2380"
+ETCD_INITIAL_ADVERTISE_PEER_URLS="https://192.168.11.128:2380"
+ETCD_ADVERTISE_CLIENT_URLS="https://192.168.11.128:2379"
+ETCD_INITIAL_CLUSTER="etcd-1=https://192.168.11.128:2380,etcd-2=https://192.168.11.129:2380,etcd-3=https://192.168.11.130:2380"
 ETCD_INITIAL_CLUSTER_TOKEN="etcd-cluster"
 ETCD_INITIAL_CLUSTER_STATE="new"
 EOF
@@ -190,7 +209,7 @@ EOF
 
 ~~~shell
 ##systemd管理etcd
-[root@k8s-master170 ~]# cat > /usr/lib/systemd/system/etcd.service << EOF
+[root@k8s-master170 ~]# sudo bash -c  "cat > /usr/lib/systemd/system/etcd.service" << EOF
 [Unit]
 Description=Etcd Server
 After=network.target
@@ -215,6 +234,18 @@ LimitNOFILE=65536
 WantedBy=multi-user.target
 EOF
 
+## etcd 4.3 会自动读取 不需要人为去配置了
+--name=\${ETCD_NAME} \
+--data-dir=\${ETCD_DATA_DIR} \
+--listen-peer-urls=\${ETCD_LISTEN_PEER_URLS} \
+--listen-client-urls=\${ETCD_LISTEN_CLIENT_URLS} \
+--advertise-client-urls=\${ETCD_ADVERTISE_CLIENT_URLS} \
+--initial-advertise-peer-urls=\${ETCD_INITIAL_ADVERTISE_PEER_URLS} \
+--initial-cluster=\${ETCD_INITIAL_CLUSTER} \
+--initial-cluster-token=\${ETCD_INITIAL_CLUSTER_TOKEN} \
+--initial-cluster-state=\${ETCD_INITIAL_CLUSTER_STATE}  \
+
+
 ## 拷贝刚才生成的证书
 [root@k8s-master170 ~]# cp ~/TLS/etcd/ca*pem ~/TLS/etcd/server*pem /opt/etcd/ssl/
 [root@k8s-master170 ~]# ll !$
@@ -225,8 +256,9 @@ ll /opt/etcd/ssl/
 -rw-------. 1 root root 1679 1月   4 21:03 server-key.pem
 -rw-r--r--. 1 root root 1346 1月   4 21:03 server.pem
 
-#启动并设置开机启动
-[root@k8s-master170 ~]# systemctl daemon-reload
+#启动并设置开机启动 只需要etcd 启动了就可以了，第一个节点 不需要关心 systemctl start etcd 返回的状态，因为还有其他节点
+
+[root@k8s-master170 ~]# sudo systemctl daemon-reload
 [root@k8s-master170 ~]# systemctl start etcd
 [root@k8s-master170 ~]# systemctl enable etcd
 ~~~
@@ -273,15 +305,16 @@ Created symlink from /etc/systemd/system/multi-user.target.wants/etcd.service to
 ### 查看集群状态
 
 ~~~shell
-# sudo ETCDCTL_API=3 /opt/etcd/bin/etcdctl --cacert=/opt/etcd/ssl/ca.pem --cert=/opt/etcd/ssl/server.pem --key=/opt/etcd/ssl/server-key.pem --endpoints="https://192.168.56.138:2379,https://192.168.56.139:2379,https://192.168.56.140:2379" endpoint status --write-out=table
-# sudo ETCDCTL_API=3 /opt/etcd/bin/etcdctl --cacert=/opt/etcd/ssl/ca.pem --cert=/opt/etcd/ssl/server.pem --key=/opt/etcd/ssl/server-key.pem --endpoints="https://192.168.56.138:2379,https://192.168.56.139:2379,https://192.168.56.140:2379" get /test/testkey
+# sudo ETCDCTL_API=3 /opt/etcd/bin/etcdctl --cacert=/opt/etcd/ssl/ca.pem --cert=/opt/etcd/ssl/server.pem --key=/opt/etcd/ssl/server-key.pem --endpoints="https://192.168.11.128:2379,https://192.168.11.129:2379,https://192.168.11.130:2379" endpoint status --write-out=table
+# sudo ETCDCTL_API=3 /opt/etcd/bin/etcdctl --cacert=/opt/etcd/ssl/ca.pem --cert=/opt/etcd/ssl/server.pem --key=/opt/etcd/ssl/server-key.pem --endpoints="https://192.168.11.128:2379,https://192.168.11.129:2379,https://192.168.11.130:2379" get /test/testkey # put 插入 get 是获取
 
-[root@k8s-node171 ~]# sudo ETCDCTL_API=3 /opt/etcd/bin/etcdctl --cacert=/opt/etcd/ssl/ca.pem --cert=/opt/etcd/ssl/server.pem --key=/opt/etcd/ssl/server-key.pem --endpoints="https://192.168.56.138:2379,https://192.168.56.139:2379,https://192.168.56.140:2379" endpoint health
-https://192.168.1.171:2379 is healthy: successfully committed proposal: took = 26.729624ms
-https://192.168.1.170:2379 is healthy: successfully committed proposal: took = 16.280441ms
+[zr@master-00 etcd]$ sudo ETCDCTL_API=3 /opt/etcd/bin/etcdctl --cacert=/opt/etcd/ssl/ca.pem --cert=/opt/etcd/ssl/server.pem --key=/opt/etcd/ssl/server-key.pem --endpoints="https://192.168.11.128:2379,https://192.168.11.129:2379,https://192.168.11.130:2379" endpoint health
+https://192.168.11.130:2379 is healthy: successfully committed proposal: took = 20.402589ms
+https://192.168.11.129:2379 is healthy: successfully committed proposal: took = 18.28058ms
+https://192.168.11.128:2379 is healthy: successfully committed proposal: took = 24.400041ms
 ~~~
 
-### 安装Docker
+### 安装Docker  https://docs.docker.com/engine/install/centos/  使用非 root 用户 https://docs.docker.com/engine/install/linux-postinstall/
 
 ~~~shell
 ##下载地址
@@ -320,9 +353,9 @@ EOF
 ##创建配置文件
 [root@k8s-master170 ~]# mkdir /etc/docker
 
-cat > /etc/docker/daemon.json << EOF
+sudo bash -c "cat > /etc/docker/daemon.json" << EOF
 {
-  "registry-mirrors": ["https://b9pmyelo.mirror.aliyuncs.com"]
+  "registry-mirrors": ["https://b9pmyelo.mirror.aliyuncs.com","https://docker.mirrors.ustc.edu.cn"]
 }
 EOF
 
@@ -341,28 +374,28 @@ EOF
 [root@k8s-master170 ~]# cd k8s/
 #生成kube-apiserver证书
 [root@k8s-master170 k8s]# 
-cat > ca-config.json << EOF
+sudo bash -c "cat > ca-config.json" << EOF
 {
-  "signing": {
-    "default": {
-      "expiry": "87600h"
-    },
-    "profiles": {
-      "kubernetes": {
-         "expiry": "87600h",
-         "usages": [
-            "signing",
-            "key encipherment",
-            "server auth",
-            "client auth"
-        ]
-      }
+    "signing": {
+        "default": {
+            "expiry": "87600h"
+        },
+        "profiles": {
+            "kubernetes": {
+                "expiry": "87600h",
+                "usages": [
+                    "signing",
+                    "key encipherment",
+                    "server auth",
+                    "client auth"
+                ]
+            }
+        }
     }
-  }
 }
 EOF
 
-cat > ca-csr.json << EOF
+sudo bash -c "cat > ca-csr.json" << EOF
 {
     "CN": "kubernetes",
     "key": {
@@ -390,36 +423,51 @@ EOF
 ##使用自签CA签发kube-apiserver HTTPS证书
 ##创建证书申请文件
 
-cat > server-csr.json << EOF
+sudo bash -c "cat > server-csr.json" << EOF
 {
     "CN": "kubernetes",
     "hosts": [
-      "10.0.0.1",
-      "127.0.0.1",
-      "192.168.1.170",
-      "192.168.1.171",
-      "192.168.1.172",
-      "192.168.1.173",
-      "192.168.1.174",
-      "192.168.1.175",
-      "192.168.1.176",
-      "192.168.56.133",
-      "192.168.56.134",
-      "192.168.56.135",
-      "192.168.56.136",
-      "192.168.56.137",
-      "192.168.56.138",
-      "192.168.56.139",
-      "192.168.56.140",
-      "192.168.56.141",
-      "192.168.56.142",
-      "192.168.56.143",
-      "192.168.56.145",
-      "kubernetes",
-      "kubernetes.default",
-      "kubernetes.default.svc",
-      "kubernetes.default.svc.cluster",
-      "kubernetes.default.svc.cluster.local"
+        "10.0.0.1",
+        "127.0.0.1",
+        "192.168.1.170",
+        "192.168.1.171",
+        "192.168.1.172",
+        "192.168.1.173",
+        "192.168.1.174",
+        "192.168.1.175",
+        "192.168.1.176",
+        "192.168.56.133",
+        "192.168.56.134",
+        "192.168.56.135",
+        "192.168.56.136",
+        "192.168.56.137",
+        "192.168.56.138",
+        "192.168.56.139",
+        "192.168.56.140",
+        "192.168.56.141",
+        "192.168.56.142",
+        "192.168.56.143",
+        "192.168.56.145",
+        "192.168.11.125",
+        "192.168.11.126",
+        "192.168.11.127",
+        "192.168.11.128",
+        "192.168.11.129",
+        "192.168.11.130",
+        "192.168.11.131",
+        "192.168.11.132",
+        "192.168.11.133",
+        "192.168.11.134",
+        "192.168.11.135",
+        "192.168.11.136",
+        "192.168.11.137",
+        "192.168.11.138",
+        "192.168.11.139",
+        "kubernetes",
+        "kubernetes.default",
+        "kubernetes.default.svc",
+        "kubernetes.default.svc.cluster",
+        "kubernetes.default.svc.cluster.local"
     ],
     "key": {
         "algo": "rsa",
@@ -437,12 +485,62 @@ cat > server-csr.json << EOF
 }
 EOF
 
-[root@k8s-master170 k8s]# cfssl gencert -ca=ca.pem -ca-key=ca-key.pem -config=ca-config.json -profile=kubernetes server-csr.json | cfssljson -bare server
+[root@k8s-master170 k8s]# cfssl gencert -ca=ca.pem -ca-key=ca-key.pem -config=ca-config.json -profile=kubernetes server-csr.json | cfssljson -bare server # -profile=kubernetes 与 "CN": "kubernetes" 保持一致
 [root@k8s-master170 k8s]# ll server*pem
 -rw-------. 1 root root 1675 1月   4 21:51 server-key.pem
 -rw-r--r--. 1 root root 1659 1月   4 21:51 server.pem
+~~
 
-~~~
+## 创建 admin 账户 公私钥 如果不创建 那么可能 8080 会 拒绝访问 
+sudo bash -c "cat > server-csr.json" << EOF
+{
+    "CN": "admin",
+    "key": {
+        "algo": "rsa",
+        "size": 2048
+    },
+    "names": [
+        {
+            "C": "CN",
+            "L": "BeiJing",
+            "ST": "BeiJing",
+            "O": "system:masters",
+            "OU": "System"
+        }
+    ]
+}
+EOF
+
+```shell
+
+cfssl gencert -ca=ca.pem -ca-key=ca-key.pem -config=ca-config.json -profile=kubernetes admin-csr.json | cfssljson -bare admin
+cp admin.pem admin-key.pem /opt/kubernetes/ssl
+
+```
+
+#  https://masterIp:6443  与--secure-port=6443   保持一致
+
+sudo bash -c "cat > ~/.kube/config" << EOF
+apiVersion: v1
+clusters:
+- cluster:
+    certificate-authority: /opt/kubernetes/ssl/ca.pem
+    server: https://masterIp:6443 
+  name: kubernetes
+contexts:
+- context:
+    cluster: kubernetes
+    user: admin
+  name: default
+current-context: default
+kind: Config
+preferences: {}
+users:
+- name: admin
+  user:
+    client-certificate: /opt/kubernetes/ssl/admin.pem
+    client-key: /opt/kubernetes/ssl/admin-key.pem
+EOF
 
 ~~~shell
 #从Github下载二进制文件
@@ -461,14 +559,14 @@ EOF
 ### 部署kube-apiserver
 
 ~~~shell
-cat > /opt/kubernetes/cfg/kube-apiserver.conf << EOF
+sudo bash -c "cat > /opt/kubernetes/cfg/kube-apiserver.conf" << EOF
 KUBE_APISERVER_OPTS="--logtostderr=false \\
 --v=2 \\
 --log-dir=/opt/kubernetes/logs \\
---etcd-servers=https://192.168.56.138:2379,https://192.168.56.139:2379,https://192.168.56.140:2379 \\
---bind-address=192.168.56.138 \\
+--etcd-servers=https://192.168.11.128:2379,https://192.168.11.129:2379,https://192.168.11.130:2379 \\
+--bind-address=0.0.0.0 \\
 --secure-port=6443 \\
---advertise-address=192.168.56.138 \\
+--advertise-address=192.168.11.128 \\
 --allow-privileged=true \\
 --service-cluster-ip-range=10.0.0.0/24 \\
 --enable-admission-plugins=NamespaceLifecycle,LimitRanger,ServiceAccount,ResourceQuota,NodeRestriction \\
@@ -476,12 +574,15 @@ KUBE_APISERVER_OPTS="--logtostderr=false \\
 --enable-bootstrap-token-auth=true \\
 --token-auth-file=/opt/kubernetes/cfg/token.csv \\
 --service-node-port-range=30000-32767 \\
+--kubelet-certificate-authority=/opt/kubernetes/ssl/ca.pem \\
 --kubelet-client-certificate=/opt/kubernetes/ssl/server.pem \\
 --kubelet-client-key=/opt/kubernetes/ssl/server-key.pem \\
 --tls-cert-file=/opt/kubernetes/ssl/server.pem  \\
 --tls-private-key-file=/opt/kubernetes/ssl/server-key.pem \\
 --client-ca-file=/opt/kubernetes/ssl/ca.pem \\
---service-account-key-file=/opt/kubernetes/ssl/ca-key.pem \\
+--service-account-key-file=/opt/kubernetes/ssl/server.pem \\
+--service-account-signing-key-file=/opt/kubernetes/ssl/server-key.pem \\
+--service-account-issuer=https://kubernetes.default.svc.cluster.local \\
 --etcd-cafile=/opt/etcd/ssl/ca.pem \\
 --etcd-certfile=/opt/etcd/ssl/server.pem \\
 --etcd-keyfile=/opt/etcd/ssl/server-key.pem \\
@@ -531,15 +632,15 @@ TLS Bootstraping：Master apiserver启用TLS认证后，Node节点kubelet和kube
 
 #token也可自行生成替换
 [root@k8s-master170 ~]# head -c 16 /dev/urandom | od -An -t x | tr -d ' '
-35f55b9be7663bfe47b3d709f8ece62c
-cat > /opt/kubernetes/cfg/token.csv << EOF
-35f55b9be7663bfe47b3d709f8ece62c,kubelet-bootstrap,10001,"system:node-bootstrapper"
+c2e6895d76ac834d3454509a4e9480ed
+sudo bash -c "cat > /opt/kubernetes/cfg/token.csv" << EOF
+c2e6895d76ac834d3454509a4e9480ed,kubelet-bootstrap,10001,"system:node-bootstrapper"
 EOF
 
 
 #systemd管理apiserver
 [root@k8s-master170 ~]#
-cat > /usr/lib/systemd/system/kube-apiserver.service << EOF
+sudo bash -c "cat > /usr/lib/systemd/system/kube-apiserver.service" << EOF
 [Unit]
 Description=Kubernetes API Server
 Documentation=https://github.com/kubernetes/kubernetes
@@ -554,8 +655,8 @@ WantedBy=multi-user.target
 EOF
 
 #启动并设置开机启动
-[root@k8s-master170 ~]# systemctl daemon-reload
-[root@k8s-master170 ~]# systemctl start kube-apiserver
+[root@k8s-master170 ~]# sudo systemctl daemon-reload
+[root@k8s-master170 ~]# sudo systemctl start kube-apiserver
 [root@k8s-master170 ~]# systemctl enable kube-apiserver
 Created symlink from /etc/systemd/system/multi-user.target.wants/kube-apiserver.service to /usr/lib/systemd/system/kube-apiserver.service.
 
@@ -566,38 +667,43 @@ Created symlink from /etc/systemd/system/multi-user.target.wants/kube-apiserver.
      Docs: https://github.com/kubernetes/kubernetes
  Main PID: 11975 (kube-apiserver)
 
+# 有这个错误不影响操作
+Unable to remove old endpoints from kubernetes service: StorageError: key not found, Code: 1, Key: /registr>
 ~~~
+
+
 
 ### 授权kubelet-bootstrap用户允许请求证书 这个必须要正确不然子节点会错误的
 
 ~~~shell
-kubectl create clusterrolebinding kubelet-bootstrap \
---clusterrole=system:node-bootstrapper \
---user=kubelet-bootstrap
 
-## clusterrolebinding.rbac.authorization.k8s.io/kubelet-bootstrap 
+[zr@master-00 .kube]$ kubectl create clusterrolebinding kubelet-bootstrap \
+ --clusterrole=system:node-bootstrapper \
+ --user=kubelet-bootstrap
+clusterrolebinding.rbac.authorization.k8s.io/kubelet-bootstrap created
 
 ~~~
 
 ### 部署kube-controller-manager
 
 ~~~shell
-[root@k8s-master170 kubernetes]#  sudo bash -c "cat > /etc/hosts" <<EOF
-cat > /opt/kubernetes/cfg/kube-controller-manager.conf << EOF
+[root@k8s-master170 kubernetes]#  sudo bash -c  "cat > /opt/kubernetes/cfg/kube-controller-manager.conf" << EOF
 KUBE_CONTROLLER_MANAGER_OPTS="--logtostderr=false \\
 --v=2 \\
 --log-dir=/opt/kubernetes/logs \\
 --leader-elect=true \\
---master=127.0.0.1:8080 \\
+--master=https://192.168.11.128:6443 \\
 --bind-address=127.0.0.1 \\
 --allocate-node-cidrs=true \\
 --cluster-cidr=10.244.0.0/16 \\
+--client-ca-file=/opt/kubernetes/ssl/ca.pem \\
 --service-cluster-ip-range=10.0.0.0/24 \\
+--use-service-account-credentials=true \\
+--controllers=*,bootstrapsigner,tokencleaner \\
 --cluster-signing-cert-file=/opt/kubernetes/ssl/ca.pem \\
---cluster-signing-key-file=/opt/kubernetes/ssl/ca-key.pem  \\
+--cluster-signing-key-file=/opt/kubernetes/ssl/ca-key.pem \\
 --root-ca-file=/opt/kubernetes/ssl/ca.pem \\
---service-account-private-key-file=/opt/kubernetes/ssl/ca-key.pem \\
---experimental-cluster-signing-duration=87600h0m0s"
+--service-account-private-key-file=/opt/kubernetes/ssl/server-key.pem"
 EOF
 
 
@@ -626,10 +732,10 @@ EOF
 
 
 #启动并设置开机启动
-[root@k8s-master170 kubernetes]# systemctl daemon-reload
-[root@k8s-master170 kubernetes]# systemctl start kube-controller-manager
-[root@k8s-master170 kubernetes]# systemctl enable kube-controller-manager
-[root@k8s-master170 kubernetes]# systemctl status kube-controller-manager
+[root@k8s-master170 kubernetes]# sudo systemctl daemon-reload
+[root@k8s-master170 kubernetes]# sudo systemctl start kube-controller-manager
+[root@k8s-master170 kubernetes]# sudo systemctl enable kube-controller-manager
+[root@k8s-master170 kubernetes]# sudo systemctl status kube-controller-manager
 ● kube-controller-manager.service - Kubernetes Controller Manager
    Loaded: loaded (/usr/lib/systemd/system/kube-controller-manager.service; enabled; vendor preset: disabled)
    Active: active (running) since 一 2021-01-04 23:02:59 CST; 56s ago
@@ -644,12 +750,12 @@ EOF
 ~~~shell
 [root@k8s-master170 kubernetes]#
 sudo bash -c "cat > /opt/kubernetes/cfg/kube-scheduler.conf" << EOF
-KUBE_SCHEDULER_OPTS="--logtostderr=false \
---v=2 \
---log-dir=/opt/kubernetes/logs \
---leader-elect \
---master=127.0.0.1:8080 \
---bind-address=127.0.0.1"
+KUBE_SCHEDULER_OPTS="--logtostderr=false \\
+--v=2 \\
+--log-dir=/opt/kubernetes/logs \\
+--leader-elect=true \\
+--master=https://192.168.11.128:6443 \\
+--bind-address=0.0.0.0"
 EOF
 
 #–master：通过本地非安全本地端口8080连接apiserver。
@@ -692,9 +798,10 @@ Created symlink from /etc/systemd/system/multi-user.target.wants/kube-scheduler.
 
 ~~~shell
 ##报错的处理
-[root@k8s-master170 k8s]# kubectl create clusterrolebinding kubelet-bootstrap \
-> --clusterrole=system:node-bootstrapper \
-> --user=kubelet-bootstrap
+[root@k8s-master170 k8s]# sudo kubectl create clusterrolebinding kubelet-bootstrap \
+--clusterrole=system:node-bootstrapper \
+--user=kubelet-bootstrap
+
 error: Missing or incomplete configuration info.  Please point to an existing, complete config file:
 
   1. Via the command-line flag --kubeconfig
@@ -807,8 +914,8 @@ EOF
 ### 生成bootstrap.kubeconfig文件
 
 ~~~shell
-KUBE_APISERVER="https://192.168.56.138:6443" # apiserver IP:PORT
-TOKEN="35f55b9be7663bfe47b3d709f8ece62c" # 与token.csv里保持一致
+KUBE_APISERVER="https://192.168.11.128:6443" # apiserver IP:PORT
+TOKEN="c2e6895d76ac834d3454509a4e9480ed" # 与token.csv里保持一致
 
 # 生成 kubelet bootstrap kubeconfig 配置文件
 kubectl config set-cluster kubernetes \
