--- a/soft/k8s20201220-master/k8s 安装部署2020-12-20.md
+++ b/soft/k8s20201220-master/k8s 安装部署2020-12-20.md
@@ -756,3 +756,20 @@ docker save logmanager:1.0 > logmanager.tar    或者        docker save 1312423
 
 ### 安装docker-compose 
 sudo curl -L https://github.com/docker/compose/releases/download/1.29.1/docker-compose-`uname -s`-`uname -m` -o /usr/local/bin/docker-compose
+
+
+
+//
+cat <<EOF | sudo tee /etc/yum.repos.d/kubernetes.repo
+[kubernetes]
+name=Kubernetes
+baseurl=https://mirrors.aliyun.com/kubernetes/yum/repos/kubernetes-el7-x86_64/
+enabled=1
+gpgcheck=1
+repo_gpgcheck=1
+gpgkey=https://mirrors.aliyun.com/kubernetes/yum/doc/yum-key.gpg https://mirrors.aliyun.com/kubernetes/yum/doc/rpm-package-key.gpg
+exclude=kubelet kubeadm kubectl
+EOF
+
+
+kubeadm init --apiserver-advertise-address 192.168.11.132 --kubernetes-version="v1.20.1" --pod-network-cidr=10.244.0.0/16 --image-repository=registry.aliyuncs.com/google_containers | tee kubeadm-init.log
