--- a/soft/k8s20201220-master/使用二进制方式搭建K8S集群-2021-1-4.md
+++ b/soft/k8s20201220-master/使用二进制方式搭建K8S集群-2021-1-4.md
@@ -466,14 +466,14 @@ EOF
 ### 部署kube-apiserver
 
 ~~~shell
-cat > /opt/kubernetes/cfg/kube-apiserver.conf << EOF
+sudo bash "cat > /opt/kubernetes/cfg/kube-apiserver.conf" << EOF
 KUBE_APISERVER_OPTS="--logtostderr=false \\
 --v=2 \\
 --log-dir=/opt/kubernetes/logs \\
---etcd-servers=https://192.168.1.170:2379,https://192.168.1.171:2379 \\
---bind-address=192.168.1.170 \\
+--etcd-servers=https://192.168.11.128:2379,https://192.168.11.129:2379,https://192.168.11.130:2379 \\
+--bind-address=0.0.0.0 \\
 --secure-port=6443 \\
---advertise-address=192.168.1.170 \\
+--advertise-address=192.168.11.128 \\
 --allow-privileged=true \\
 --service-cluster-ip-range=10.0.0.0/24 \\
 --enable-admission-plugins=NamespaceLifecycle,LimitRanger,ServiceAccount,ResourceQuota,NodeRestriction \\
@@ -487,6 +487,8 @@ KUBE_APISERVER_OPTS="--logtostderr=false \\
 --tls-private-key-file=/opt/kubernetes/ssl/server-key.pem \\
 --client-ca-file=/opt/kubernetes/ssl/ca.pem \\
 --service-account-key-file=/opt/kubernetes/ssl/ca-key.pem \\
+--service-account-signing-key-file=/opt/kubernetes/ssl/server-key.pem \\
+--service-account-issuer=https://kubernetes.default.svc.cluster.local \\
 --etcd-cafile=/opt/etcd/ssl/ca.pem \\
 --etcd-certfile=/opt/etcd/ssl/server.pem \\
 --etcd-keyfile=/opt/etcd/ssl/server-key.pem \\
