--- a/soft/k8s20201220-master/使用二进制方式搭建K8S集群-2021-1-5.md
+++ b/soft/k8s20201220-master/使用二进制方式搭建K8S集群-2021-1-5.md
@@ -492,9 +492,52 @@ EOF
 ~~
 
 ## 创建 admin 账户 公私钥 如果不创建 那么可能 8080 会 拒绝访问 
-sudo bash -c "cat > server-csr.json" << EOF
+sudo bash -c "cat > admin-csr.json" << EOF
 {
     "CN": "admin",
+        "hosts": [
+        "10.0.0.1",
+        "127.0.0.1",
+        "192.168.1.170",
+        "192.168.1.171",
+        "192.168.1.172",
+        "192.168.1.173",
+        "192.168.1.174",
+        "192.168.1.175",
+        "192.168.1.176",
+        "192.168.56.133",
+        "192.168.56.134",
+        "192.168.56.135",
+        "192.168.56.136",
+        "192.168.56.137",
+        "192.168.56.138",
+        "192.168.56.139",
+        "192.168.56.140",
+        "192.168.56.141",
+        "192.168.56.142",
+        "192.168.56.143",
+        "192.168.56.145",
+        "192.168.11.125",
+        "192.168.11.126",
+        "192.168.11.127",
+        "192.168.11.128",
+        "192.168.11.129",
+        "192.168.11.130",
+        "192.168.11.131",
+        "192.168.11.132",
+        "192.168.11.133",
+        "192.168.11.134",
+        "192.168.11.135",
+        "192.168.11.136",
+        "192.168.11.137",
+        "192.168.11.138",
+        "192.168.11.139",
+        "kubernetes",
+        "kubernetes.default",
+        "kubernetes.default.svc",
+        "kubernetes.default.svc.cluster",
+        "kubernetes.default.svc.cluster.local"
+    ],
     "key": {
         "algo": "rsa",
         "size": 2048
@@ -555,6 +598,20 @@ EOF
 [root@k8s-master170 bin]# cp kubectl /usr/bin/
 
 ~~~
+### 启用 TLS Bootstrapping 机制
+
+TLS Bootstraping：Master apiserver启用TLS认证后，Node节点kubelet和kube-proxy要与kube-apiserver进行通信，必须使用CA签发的有效证书才可以，当Node节点很多时，这种客户端证书颁发需要大量工作，同样也会增加集群扩展复杂度。为了简化流程，Kubernetes引入了TLS bootstraping机制来自动颁发客户端证书，kubelet会以一个低权限用户自动向apiserver申请证书，kubelet的证书由apiserver动态签署。所以强烈建议在Node上使用这种方式，目前主要用于kubelet，kube-proxy还是由我们统一颁发一个证书。
+
+~~~shell
+
+#token也可自行生成替换
+[root@k8s-master170 ~]# head -c 16 /dev/urandom | od -An -t x | tr -d ' '
+c2e6895d76ac834d3454509a4e9480ed
+sudo bash -c "cat > /opt/kubernetes/cfg/token.csv" << EOF
+608b5dc7dc97abda337e24402228d2fb,kubelet-bootstrap,10001,"system:node-bootstrapper"
+EOF
+
+
 
 ### 部署kube-apiserver
 
@@ -623,20 +680,6 @@ EOF
 
 
 ~~~
-
-### 启用 TLS Bootstrapping 机制
-
-TLS Bootstraping：Master apiserver启用TLS认证后，Node节点kubelet和kube-proxy要与kube-apiserver进行通信，必须使用CA签发的有效证书才可以，当Node节点很多时，这种客户端证书颁发需要大量工作，同样也会增加集群扩展复杂度。为了简化流程，Kubernetes引入了TLS bootstraping机制来自动颁发客户端证书，kubelet会以一个低权限用户自动向apiserver申请证书，kubelet的证书由apiserver动态签署。所以强烈建议在Node上使用这种方式，目前主要用于kubelet，kube-proxy还是由我们统一颁发一个证书。
-
-~~~shell
-
-#token也可自行生成替换
-[root@k8s-master170 ~]# head -c 16 /dev/urandom | od -An -t x | tr -d ' '
-c2e6895d76ac834d3454509a4e9480ed
-sudo bash -c "cat > /opt/kubernetes/cfg/token.csv" << EOF
-c2e6895d76ac834d3454509a4e9480ed,kubelet-bootstrap,10001,"system:node-bootstrapper"
-EOF
-
 
 #systemd管理apiserver
 [root@k8s-master170 ~]#
@@ -1479,3 +1522,105 @@ web-5dcb957ccc-b9v9v   1/1     Running   0          104s
 
 ~~~
 
+apiVersion: v1
+clusters:
+- cluster:
+  certificate-authority-data: /opt/kubernetes/ssl/ca.pem
+  server: https://192.168.11.128:6443
+  name: kubernetes
+  contexts:
+- context:
+  cluster: kubernetes
+  user: kube-controller-manager
+  name: default
+  current-context: default
+  kind: Config
+  preferences: {}
+  users:
+- name: kube-controller-manager
+  user:
+  client-certificate-data: /opt/kubernetes/ssl/kube-controller-manager.pem
+  client-key-data: /opt/kubernetes/ssl/kube-controller-manager-key.pem
+
+
+apiVersion: v1
+clusters:
+- cluster:
+  certificate-authority-data: /opt/kubernetes/ssl/ca.pem
+  server: https://192.168.11.128:6443
+  name: kubernetes
+  contexts:
+- context:
+  cluster: kubernetes
+  user: system:kube-controller-manager
+  name: system:kube-controller-manager@kubernetes
+  current-context: system:kube-controller-manager@kubernetes
+  kind: Config
+  preferences: {}
+  users:
+- name: system:kube-controller-manager
+  user:
+  client-certificate-data: client-certificate-data: /opt/kubernetes/ssl/kube-controller-manager.pem
+  client-key-data: /opt/kubernetes/ssl/kube-controller-manager-key.pem
+
+CONTROLLER="/opt/kubernetes/kube-controller-manager.config"
+KUBE_APISERVER="https://192.168.11.128:6443"
+
+
+kubectl config set-cluster kubernetes \
+--certificate-authority=/opt/kubernetes/ssl/ca.pem \
+--embed-certs=true \
+--server=${KUBE_APISERVER} \
+--kubeconfig=${CONTROLLER}
+
+
+kubectl config set-credentials kube-controller-manager \
+--client-certificate=/opt/kubernetes/ssl/kube-controller-manager.pem \
+--client-key=/opt/kubernetes/ssl/kube-controller-manager-key.pem \
+--embed-certs=true \
+--kubeconfig=${CONTROLLER} 
+
+
+kubectl config set-context default \
+--cluster=kubernetes \
+--user=kube-controller-manager \
+--kubeconfig=${CONTROLLER} 
+
+kubectl config use-context default --kubeconfig=${CONTROLLER}
+
+sudo ./bin/kube-controller-manager --logtostderr=false --v=2  --requestheader-client-ca-file=/opt/kubernetes/ssl/ca.pem --log-dir=/opt/kubernetes/logs --leader-elect=true --kubeconfig=/etc/kubernetes/controller-manager.conf  --authentication-kubeconfig=/etc/kubernetes/controller-manager.conf --authorization-kubeconfig=/etc/kubernetes/controller-manager.conf --master=https://192.168.11.128:6443 --service-cluster-ip-range=10.96.0.0/12 --use-service-account-credentials=true --bind-address=0.0.0.0 --allocate-node-cidrs=true --cluster-cidr=10.244.0.0/16 --client-ca-file=/opt/kubernetes/ssl/ca.pem --service-cluster-ip-range=10.0.0.0/24 --cluster-signing-cert-file=/opt/kubernetes/ssl/ca.pem --cluster-signing-key-file=/opt/kubernetes/ssl/ca-key.pem --root-ca-file=/opt/kubernetes/ssl/ca.pem --service-account-private-key-file=/opt/kubernetes/ssl/ca-key.pem
+sudo ./bin/kube-controller-manager --logtostderr=false --v=2  --requestheader-client-ca-file=/opt/kubernetes/ssl/ca.pem --log-dir=/opt/kubernetes/logs --leader-elect=true --kubeconfig=/etc/kubernetes/controller-manager.conf  --authentication-kubeconfig=/etc/kubernetes/controller-manager.conf --authorization-kubeconfig=/etc/kubernetes/controller-manager.conf --master=https://192.168.11.128:6443 --service-cluster-ip-range=10.96.0.0/12 --use-service-account-credentials=true --bind-address=0.0.0.0 --allocate-node-cidrs=true --cluster-cidr=10.244.0.0/16 --client-ca-file=/opt/kubernetes/ssl/ca.pem --service-cluster-ip-range=10.0.0.0/24 --cluster-signing-cert-file=/opt/kubernetes/ssl/ca.pem --cluster-signing-key-file=/opt/kubernetes/ssl/ca-key.pem --root-ca-file=/opt/kubernetes/ssl/ca.pem --service-account-private-key-file=/opt/kubernetes/ssl/ca-key.pem --controllers=*,bootstrapsigner,tokencleaner
+sudo ./bin/kube-controller-manager --logtostderr=false --v=2 --log-dir=/opt/kubernetes/logs --leader-elect=true --requestheader-client-ca-file=/opt/kubernetes/ssl/ca.pem  --authentication-kubeconfig=/etc/kubernetes/controller-manager.conf --authorization-kubeconfig=/etc/kubernetes/controller-manager.conf --master=https://192.168.11.128:6443 --service-cluster-ip-range=10.96.0.0/12 --use-service-account-credentials=true --bind-address=0.0.0.0 --allocate-node-cidrs=true --cluster-cidr=10.244.0.0/16 --client-ca-file=/opt/kubernetes/ssl/ca.pem --service-cluster-ip-range=10.0.0.0/24 --cluster-signing-cert-file=/opt/kubernetes/ssl/ca.pem --cluster-signing-key-file=/opt/kubernetes/ssl/ca-key.pem --root-ca-file=/opt/kubernetes/ssl/ca.pem --service-account-private-key-file=/opt/kubernetes/ssl/server-key.pem
+
+KUBE_APISERVER="https://192.168.11.128:6443"
+CONTROLLER="/opt/kubernetes/kube-admin.config"
+
+kubectl config set-cluster kubernetes  --certificate-authority=/opt/kubernetes/ssl/ca.pem  --embed-certs=true  --server=${KUBE_APISERVER} --kubeconfig=${CONTROLLER}
+kubectl config set-credentials admin  --client-certificate=/opt/kubernetes/ssl/admin.pem  --embed-certs=true  --client-key=/opt/kubernetes/ssl/admin-key.pem --kubeconfig=${CONTROLLER}
+kubectl config set-context default --cluster=kubernetes --user=admin --kubeconfig=${CONTROLLER}
+kubectl config use-context default --kubeconfig=${CONTROLLER}
+
+
+
+curl --cacert ./ssl/ca.pem --cert ./ssl/kube-controller-manager.pem --key ./ssl/kube-controller-manager-key.pem https://192.168.11.128:6443
+curl --cacert ./ssl/ca.pem --cert ./ssl/admin.pem --key ./ssl/admin-key.pem https://192.168.11.128:6443
+
+
+sudo kubectl config set-cluster kubernetes \
+--certificate-authority=/opt/kubernetes/ssl/ca.pem \
+--embed-certs=true \
+--server=https://192.168.11.133:6443 \
+--kubeconfig=/home/zr/.kube/config 
+
+sudo kubectl config set-credentials kube-admin \
+--client-certificate=/opt/kubernetes/ssl/admin.pem \
+--client-key=/opt/kubernetes/ssl/admin-key.pem \
+--embed-certs=true \
+--kubeconfig=/home/zr/.kube/config 
+
+sudo kubectl config set-context kube-admin@kubernetes \
+--cluster=kubernetes \
+--user=kube-admin \
+--kubeconfig=/home/zr/.kube/config 
+
+sudo kubectl config use-context kube-admin@kubernetes --kubeconfig=/home/zr/.kube/config 
